--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.0.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
@@ -56,6 +57,7 @@
     "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
